--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   body {
     font-size: 16px;
     padding: 8px;
-    background-color: #f9f9f9;
+    background-color: #161515;
   }
 
   .container {
@@ -28,3 +28,4 @@
     margin-top: 5px;
   }
 }
+
